添加端口映射 添加动态添加组件

--- a/FudanFPGA.CrossUI.Web/ClientApp/src/components/Devices/HButton/HButton.css
+++ b/FudanFPGA.CrossUI.Web/ClientApp/src/components/Devices/HButton/HButton.css
@@ -1,8 +1,6 @@
 .myToggleButton {
     border-width: 2px;
     border-radius: 30px;
-    outline: none;
-    box-shadow: none;
     width: 60px;
     height: 60px;
     padding: 2px;
@@ -11,17 +9,14 @@
 .myToggleButton:hover {
     background-color: transparent;
     color: #6c757d;
-    outline: none;
-    box-shadow: none;
     border-width: 2px;
 }
 
 .myToggleButton:focus,
-.myToggleButton.focus,
-.myToggleButton:active,
-.myToggleButton.active,
 .myToggleButton:active:focus
 .myToggleButton.active:focus
+.myToggleButton.focus,
+.myToggleButton:active.focus
 .myToggleButton.active.focus
 {
     outline: none;
