--- a/FudanFPGA.CrossUI.Web/ClientApp/src/components/MainPanel/MainPanel.css
+++ b/FudanFPGA.CrossUI.Web/ClientApp/src/components/MainPanel/MainPanel.css
@@ -1,4 +1,4 @@
-﻿/* Position and sizing of burger button */
+/* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
   width: 20px;
