--- a/FudanFPGA.CrossUI.Web/ClientApp/src/components/Title.css
+++ b/FudanFPGA.CrossUI.Web/ClientApp/src/components/Title.css
@@ -139,7 +139,7 @@
 
 .systemIcon {
     -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width:.2px;
+    -webkit-text-stroke-width:0.01px;
     display: inline-block;
     margin: 0 auto;
     height: 100%;
