--- a/FudanFPGA.CrossUI.Web/ClientApp/src/components/Title.css
+++ b/FudanFPGA.CrossUI.Web/ClientApp/src/components/Title.css
@@ -18,6 +18,11 @@
     align-items: stretch;
 }
 
+.pjTitle {
+    margin-top: 8px;
+    color: white;
+}
+
 .navMenu {
     display: flex;
     flex-direction: row;
@@ -34,7 +39,7 @@
 }
 
 .titleName {
-    font-size: 20px;
+    font-size: 19px;
     color: white;
     margin-left: 10px;
 }
@@ -52,15 +57,18 @@
     align-items: flex-start;
 }
 
+@font-face {
+    font-family: 'codicon';
+    src: url('./Resource/codicon.ttf');
+}
+
 .btn-min {
     color: white;
     border-radius: 0px;
     height: 30px;
     width: 46px;
     padding: 0px;
-    font-size: 10px;
-    font-family: Segoe MDL2 Assets;
-    font-style: normal;
+    font: normal normal normal 16px/1 codicon;
     text-shadow: none;
     box-shadow: none;
     cursor: default;
@@ -86,9 +94,7 @@
     border-color: transparent;
     outline-width: 0;
     outline-color: transparent;
-    font-size: 10px;
-    font-family: Segoe MDL2 Assets;
-    font-style: normal;
+    font: normal normal normal 16px/1 codicon;
     display: inline-block;
     text-shadow: none;
     cursor: default;
@@ -123,13 +129,19 @@
     height: 30px;
     width: 46px;
     padding: 0px;
-    font-size: 10px;
-    font-family: Segoe MDL2 Assets;
-    font-style: normal;
-    /* -webkit-font-smoothing: antialiased; */
-    text-shadow: none;
     box-shadow: none;
+    border-color: transparent;
+    outline-width: 0;
+    outline-color: transparent;
+    font-size: 16px;
+    font: normal normal normal 16px/1 codicon;
+    text-decoration: none;
+    text-rendering: auto;
+    display: inline-block;
+    text-shadow: none;
     cursor: default;
+    -webkit-font-smoothing: antialiased;
+    -webkit-user-select: none;
 }
 
 .btn-close:hover {
@@ -139,7 +151,7 @@
 
 .systemIcon {
     -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width:0.01px;
+    -webkit-text-stroke-width: 0;
     display: inline-block;
     margin: 0 auto;
     height: 100%;
