--- a/Wonton.CrossUI.Web/ClientApp/src/components/Start.css
+++ b/Wonton.CrossUI.Web/ClientApp/src/components/Start.css
@@ -18,16 +18,17 @@
 }
 
 .tranButton {
-    width: 100px;
+    width: 150px;
     height: 80px;
     background-color: transparent;
     color: #6c757d;
     border-width: 1px;
+    border-radius: 0px;
 }
 
 .startList {
     height: 250px;
-    width: 230px;
+    width: 280px;
     overflow-y: auto;
     overflow-x: hidden;
 }
