--- a/Wonton.WinUI.UWP/MainPage.xaml
+++ b/Wonton.WinUI.UWP/MainPage.xaml
@@ -6,9 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loaded="Page_Loaded">
 
     <Grid>
-
+        <WebView x:Name="webview" />
     </Grid>
 </Page>
