--- a/Wonton.WinUI.WPF/MainWindow.xaml
+++ b/Wonton.WinUI.WPF/MainWindow.xaml
@@ -1,12 +1,19 @@
-﻿<Window x:Class="Wonton.WinUI.WPF.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wonton.WinUI.WPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:Controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls.WebView" x:Class="Wonton.WinUI.WPF.MainWindow"
+        mc:Ignorable="d" 
+        WindowStyle="None"
+        Title="MainWindow" Height="550" Width="900" Loaded="Window_Loaded">
     <Grid>
-
+        <Controls:WebView x:Name="webview"/>
     </Grid>
+
+    <WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="0"  ResizeBorderThickness="10" CaptionHeight="0" CornerRadius="0" />
+    </WindowChrome.WindowChrome>
+
 </Window>
