--- a/Wonton.CrossUI.Web/ClientApp/src/components/Start.css
+++ b/Wonton.CrossUI.Web/ClientApp/src/components/Start.css
@@ -32,3 +32,16 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+.startList::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+.startList::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    border-radius: 8px;
+    background: #b1b1b1;
+}
+.startList::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    border-radius: 8px;
+    background: #EDEDED;
+}
