新增黑暗模式

--- a/Wonton.CrossUI.Web/ClientApp/src/components/Devices/DeviceLayout.css
+++ b/Wonton.CrossUI.Web/ClientApp/src/components/Devices/DeviceLayout.css
@@ -10,3 +10,15 @@
     outline: none;
     box-shadow:none;
 }
+
+.darkmode .instance-name {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.darkmode .instance-setting {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.darkmode .instance-remove {
+    color: rgb(255, 175, 175);
+}
