--- a/Wonton.CrossUI.Web/ClientApp/src/components/Devices/HButton/HButton.css
+++ b/Wonton.CrossUI.Web/ClientApp/src/components/Devices/HButton/HButton.css
@@ -23,3 +23,8 @@
     box-shadow: none;
 
 }
+
+.darkmode .myToggleButton {
+    color: rgba(255, 255, 255, 0.8);
+    border-color: rgba(255, 255, 255, 0.8);
+}
